[package]
name = "emu-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
hyperemu = { git = "https://github.com/Robby-cell/hyperemu.git", tag = "0.1.0" }
armv7-encoder = { git = "https://github.com/Robby-cell/armv7-encoder.git", tag = "0.3.7" }
armv7-disassembler = { git = "https://github.com/Robby-cell/armv7-disassembler.git", tag = "0.3.2" }
x86-translator = { git = "https://github.com/Robby-cell/x86-translator.git", tag = "0.1.2" }

# For local development to get the most up to date changes.
# hyperemu = { path = "../hyperemu" }
# armv7-encoder = { path = "../armv7-encoder" }
# armv7-disassembler = { path = "../armv7-disassembler" }
# x86-translator = { path = "../x86-translator" }

eframe = { version = "0.34.2", features = ["persistence", "ron"] }
egui = "0.34.2"
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1" }
log = { version = "0.4.29" }
wasm-bindgen = "0.2.121"
wasm-bindgen-futures = "0.4.71"
web-sys = { version = "0.3.98", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
] }
