[package]
name = "hyperemu-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
hyperemu = { git = "https://github.com/Robby-cell/hyperemu.git", tag = "0.1.5" }
armv7-encoder = { git = "https://github.com/Robby-cell/armv7-encoder.git", tag = "0.3.7" }
armv7-disassembler = { git = "https://github.com/Robby-cell/armv7-disassembler.git", tag = "0.3.2" }
x86-translator = { git = "https://github.com/Robby-cell/x86-translator.git", tag = "0.2.0" }
riscv_asm = { git = "https://github.com/Robby-cell/riscv-assembler.git", tag = "0.1.2" }

# For local development to get the most up to date changes.
# hyperemu = { path = "../hyperemu" }
# armv7-encoder = { path = "../armv7-encoder" }
# armv7-disassembler = { path = "../armv7-disassembler" }
# x86-translator = { path = "../x86-translator" }
# riscv_asm = { path = "../riscv_asm" }

eframe = { version = "=0.35.0", features = ["persistence", "ron"] }
egui = "=0.35.0"
rfd = "0.17.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1" }
log = { version = "0.4" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
] }
